Closed
Bug 749128
Opened 13 years ago
Closed 13 years ago
Make sure to have JSContext before creating TabChildGlobal
Categories
(Core :: IPC, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smaug, Assigned: smaug)
References
Details
Attachments
(2 files)
2.50 KB,
patch
|
jst
:
review+
justin.lebar+bug
:
feedback+
|
Details | Diff | Splinter Review |
2.56 KB,
patch
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Comment 1•13 years ago
|
||
this shouldn't be terribly bad bug, since without the context safejscontext
is used for JSON message creation.
Attachment #618605 -
Flags: review?(justin.lebar+bug)
Assignee | ||
Comment 2•13 years ago
|
||
...but I want to fix the assertion mention in bug 749018
Comment 3•13 years ago
|
||
Comment on attachment 618605 [details] [diff] [review]
patch
This looks fine to me, but I don't feel comfortable reviewing this code.
Attachment #618605 -
Flags: review?(justin.lebar+bug) → feedback+
Assignee | ||
Updated•13 years ago
|
Attachment #618605 -
Flags: review?(jst)
Comment 4•13 years ago
|
||
This fixes my assertion, so I'm happy.
Comment 5•13 years ago
|
||
Comment on attachment 618605 [details] [diff] [review]
patch
- In TabChildGlobal::Init()
mMessageManager = new nsFrameMessageManager(false,
SendSyncMessageToParent,
SendAsyncMessageToParent,
nsnull,
mTabChild,
nsnull,
- aTabChild->GetJSContext());
+ mTabChild->GetJSContext());
}
Should we assert here that this is not called more than once?
r=jst either way.
Attachment #618605 -
Flags: review?(jst) → review+
Assignee | ||
Comment 6•13 years ago
|
||
I can add an assert
Assignee | ||
Comment 7•13 years ago
|
||
Assignee | ||
Comment 8•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•