Bug 749128 - Make sure to have JSContext before creating TabChildGlobal, r=jst